update for voi mainnet

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
 	"EndpointAddress": "0.0.0.0:8080",
-	"DNSBootstrapID": "<network>.voi.network",
+	"DNSBootstrapID": "<network>.mainnet-voi.network?backup=<network>.mainnet-voi.net&dedup=<name>.mainnet-voi.(network|net)",
 	"EnableCatchupFromArchiveServers": true
 }
